[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}

# We need the optional `derive` feature to use `serde`'s procedural macros:
# `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
# The feature is not enabled by default to avoid pulling in
# unnecessary dependencies for projects that do not need it.
serde = { version = "1", features = ["derive"]}

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx] 
version = "0.6" 
default-features = false 
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
"chrono",
"migrate"
]


# dev-dependencies are used exclusively when 
# running tests or examples. They do not get
# included in the final app binary.
[dev-dependencies]
reqwest = "0.11"
