[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
validator = "0.14"
unicode-segmentation = "1"
tracing-actix-web = "0.6"
secrecy = { version = "0.8", features = ["serde"] }
tracing = { version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
config = "0.13"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
rand = { version = "0.8", features=["std_rng"] }
base64 = "0.13"
sha3 = "0.9"

# We need the optional `derive` feature to use `serde`'s procedural macros:
# `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
# The feature is not enabled by default to avoid pulling in
# unnecessary dependencies for projects that do not need it.
serde = { version = "1", features = ["derive"]}
serde-aux = "3"
thiserror = "1"
anyhow = "1"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx] 
version = "0.6" 
default-features = false 
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dependencies.reqwest]
version = "0.11"
default-features = false
# We need the `json` feature flag to serialize/deserialize JSON payloads 
features = ["json", "rustls-tls"]

# dev-dependencies are used exclusively when 
# running tests or examples. They do not get
# included in the final app binary.
[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
fake = "~2.3"
once_cell = "1"
claim = "0.5"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
serde_json = "1"
linkify = "0.8"
